--- a/css/main-stylesheet.css
+++ b/css/main-stylesheet.css
@@ -356,11 +356,11 @@ h4, h5, h6 {
 	content: '';
 	display: block;
 	position: absolute;
-	width: 16px;
-	height: 16px;
+	width: 36px;
+	height: 36px;
 	background: url(../images/icon-star.png)/*tpa=Royal Technology/images/icon-star.png*/;
 	z-index: 102;
-	top: 23px;
+	top: 16px;
 	left: 25px;
 }
 
@@ -670,7 +670,7 @@ h4, h5, h6 {
 	display: block;
 	/*min-height: 352px;*/
 	color: #fff;
-	background: url(../images/footer-background.jpg)/*tpa=Royal Technology/images/footer-background.jpg*/ repeat center top;
+	background: url(../images/slider-background.jpg)/*tpa=Royal Technology/images/footer-background.jpg*/ repeat center top;
 	box-shadow: 0 1px 1px rgba(255,255,255,0.3), inset 0 130px 100px -100px rgba(0,0,0,0.5), inset 0 -130px 100px -100px rgba(0,0,0,0.5);
 	/*min-height: 150px;*/
 }
@@ -2039,7 +2039,7 @@ h4, h5, h6 {
 }
 
 .footer {
-	color: #dddddd;
+	color: saddlebrown;
 	text-shadow: 0 1px 0 rgba(0,0,0,0.5);
 }
 
